<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/Profile"/>
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_message"
            android:title="@string/Messages"/>
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_people"
            android:title="@string/Friends"/>
    </group>

    <item android:title="Account Settings">
        <menu>
            <item
                android:id="@+id/nav_update"
                android:icon="@drawable/ic_edit"
                android:title="@string/Edit_Profile"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_signout"
                android:title="@string/Sign_off"/>
        </menu>
    </item>
</menu>